# minchin.pelican.plugins.summary

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Readme.rst  invoke.yaml  pyproject.toml  setup.py  tasks.py
.requirements/: base.in  dev.in
minchin/pelican/plugins/summary/: __init__.py  summary.py  test_summary.py
test/: pelicanconf.py  requirements.txt
test/content/articles/2024/: issue-5.md  target.md
test/themes/Peli-Kiera/static/css/: main.css  pygment.css
test/themes/Peli-Kiera/templates/: archives.html  base.html
