[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["minchin*"]
exclude = ["tests"]

[tool.setuptools.dynamic]
# this has to be the place the version is located via static analysis
version = {attr = "minchin.pelican.plugins.summary.__version__"}
# description = {attr = "minchin.jrnl.__description__"}  # must be pulled from file
readme = {file = ["README.rst"], content-type = "text/x-rst"}
dependencies = {file = [".requirements/base.in"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = [".requirements/dev.in"] }
# release = {file = [".requirements/release.in"] }
# docs = {file = [".requirements/docs.in"] }

[project]
name = "minchin.pelican.plugins.summary"
description = "Support Wikilinks when generating Pelican sites"
dynamic = [
    "version",
    # "description",
    "readme",
    "dependencies",
    "optional-dependencies",
]
authors = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
maintainers = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
# requires-python = ">=3.6"
keywords = ["pelican", "plugin"]
license = {text = "GNU Affero v3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: Plugins",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
# "Homepage" =
"Bug Tracker" = "https://github.com/MinchinWeb/minchin.pelican.plugins.summary/issues"
# Documentation = 
Repository = "https://github.com/MinchinWeb/minchin.pelican.plugins.summary"
# Changelog = 
# "Release Notes"


[tool.isort]
# Maintain compatibility with Black
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
known_first_party = "minchin"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

skip_gitignore = true

[tool.black]
line-length = 88

[tool.flake8]
# requires flake8-pyproject to read this
ignore = [
    "E203",  # conflicts with `black`
    "W503",  # "line break before binary operator", conflicts with `black`
]
max-line-length = 88
count = true
